Fix page overflow issue on small devices

--- a/page.css
+++ b/page.css
@@ -16,6 +16,7 @@ html {
 }
 
 .main {
+  overflow-x: hidden;
   padding: 40px 20px;
 }
 
